<resources>
    <string name="app_name">NewsApp</string>

    <!-- Text to display in the list when there are no news -->
    <string name="no_news">No news found.</string>

    <!-- Error message when there is no internet connectivity -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">NewsApp Settings</string>

    <!-- Strings for Section Name [CHAR LIMIT=30] -->
    <string name="settings_sectionName_label">Section</string>
    <string name="settings_sectionName_key" translatable="false">section_Name</string>
    <string name="settings_sectionName_default" translatable="false">Sport</string>

    <!--add one more user preference. Sometimes the user might want to know about news ordered by oldest,
    but other times they might want to know about the newest stories. Next, we'll package these strings up into
    string arrays by creating a new res/values/arrays.xml file.
    -->

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recentContent_value</string>

    <!-- Label for order-by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldestContent_label">Most Oldest</string>
    <string name="settings_order_by_oldestContent_value" translatable="false">oldest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recentContent_label">Most Recent</string>
    <string name="settings_order_by_most_recentContent_value" translatable="false">newest</string>

</resources>
