<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!-- add a ListPreference to the res/xml/settings_main.xml file -->
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_label"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />


    <EditTextPreference
        android:defaultValue="settings_sectionName_default"
        android:inputType="text"
        android:key="@string/settings_sectionName_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_sectionName_label" />

</PreferenceScreen>